Fix title on collapse

--- a/kay4/styles/main.css
+++ b/kay4/styles/main.css
@@ -25,6 +25,10 @@ header {
   margin-top: 40px;
 }
 
+header h1 {
+  font-size: 2.2em;
+}
+
 @media (max-width: 992px) {
   nav {
     margin-top: 40px;
